Fix panel overflow & relocate

--- a/addons/paint-layers/userstyle.css
+++ b/addons/paint-layers/userstyle.css
@@ -1,14 +1,24 @@
-.layers {
+.paint-layers-panel {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  gap: 8px;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  min-width: min-content;
+  padding: 0 8px;
 }
 
-.layer {
+.paint-layers-panel.hidden {
+  display: none;
+}
+
+.paint-layers-panel .layers {
+  margin: auto;
+}
+
+.paint-layers-panel .layer {
   border: black solid 2px;
   border-radius: 5px;
+  margin: 8px 0;
   width: 64px;
   height: 64px;
   background-position: center;
